# cecc-linux

./: .gitignore  README.md  flake.nix
.github/workflows/: release.yml
casper-wmi/: 90-excalibur-control-center.rules  Makefile  README.md  TODO.md  casper-gpu-mode.c  casper-wmi-linux-6.18.patch  casper-wmi.c  dkms.conf  install-full.sh  install-udev-rules.sh  install.sh  keyboard_control.sh  udev-permissions.sh
docs/: casper-wmi-source-structure.md  custom-titlebar-drag.md  led-brightness-behavior.md  linux-wmi-driver.md  rust-linux-driver-notes.md
excalibur-control-center/: Cargo.toml
excalibur-control-center/backend/: Cargo.toml
excalibur-control-center/cli/: Cargo.toml
excalibur-control-center/gui/: Cargo.toml
excalibur-control-center/gui/src/: lib.rs  main.rs
excalibur-control-center/gui/ui/: main.slint
excalibur-control-center/src/: lib.rs  main.rs  model.rs
packaging/: nfpm.yaml
packaging/deb/: postinstall.sh  postremove.sh
scripts/: cpu-frequency.nu  dev-perms.nu  fan-speed.nu  install-linux.nu  install-linux.sh  kbdctl.nu  matmul_bench.py  powerctl.nu  reload.nu  test-biaslight-brightness-decoupling.nu  test-keyboard-brightness.nu  test-keyboard-zone-colors.nu  test-led-behavior.nu  test-led-modes.nu
scripts/driver-bash/: apply-sysfs-permissions.sh  install-dkms-driver.sh  install-driver-stack.sh  install-full.sh  install-linux.sh  install-permission-rules.sh  install-release.sh  install-remote.sh  install-udev-rules.sh  install.sh  udev-permissions.sh
scripts/driver-nu/: apply-sysfs-permissions.nu  install-dkms-driver.nu  install.nu  (+8 more)
(+8 files in other folders)
