[package]
name = "excalibur-control-center-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland"] }
egui = "0.33"
excalibur-control-center-backend = { path = "../backend" }
wgpu = { version = "27.0.1", features = ["vulkan", "gles"] }
