[package]
name = "excalibur-control-center-gui"
version = "0.1.13"
edition = "2024"
build = "build.rs"

[build-dependencies]
slint-build = "1"

[dependencies]
excalibur-control-center-backend = { path = "../backend" }
slint = { version = "1", default-features = false, features = ["compat-1-2", "backend-winit-wayland", "renderer-software", "unstable-winit-030"] }
